manifests/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  demo-flask-backend
  namespace: default
  labels:
    app:  demo-flask-backend
spec:
  selector:
    matchLabels:
      app: demo-flask-backend
  replicas: 3
  template:
    metadata:
      labels:
        app:  demo-flask-backend
    spec:
      containers:
      - name:  demo-flask-backend
        image:  anadk/demo-flask-backend:latest
        imagePullPolicy: Always
        # resources:
        #   requests:
        #     cpu: 100m
        #     memory: 100Mi
        #   limits:
        #     cpu: 500m
        #     memory: 500Mi
        ports:
        - containerPort:  80
