manifests/nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  demo-nodejs-backend
  namespace: default
  labels:
    app:  demo-nodejs-backend
spec:
  selector:
    matchLabels:
      app: demo-nodejs-backend
  replicas: 3
  template:
    metadata:
      labels:
        app:  demo-nodejs-backend
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  demo-nodejs-backend
        image:  anadk/demo-nodejs-backend:latest
        imagePullPolicy: Always
        # resources:
        #   requests:
        #     cpu: 100m
        #     memory: 100Mi
        #   limits:
        #     cpu: 100m
        #     memory: 100Mi
        ports:
        - containerPort:  3000
