manifests/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-flask-backend
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/contents/aws"
spec:
  selector:
    app: demo-flask-backend
  type: NodePort
  # sessionAffinity: None
  # sessionAffinityConfig:
  #   clientIP:
  #     timeoutSeconds: 10800
  ports:
  - name: demo-flask-backend
    protocol: TCP
    port: 8080
    targetPort: 8080
