manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-frontend
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: demo-frontend
  type: NodePort
  # sessionAffinity: None
  # sessionAffinityConfig:
  #   clientIP:
  #     timeoutSeconds: 10800
  ports:
  - name: demo-frontend
    protocol: TCP
    port: 80
    targetPort: 80
