manifests/nodejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-nodejs-backend
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/services/all"
spec:
  selector:
    app: demo-nodejs-backend
  type: NodePort
  # sessionAffinity: None
  # sessionAffinityConfig:
  #   clientIP:
  #     timeoutSeconds: 10800
  ports:
  - name: demo-nodejs-backend
    protocol: TCP
    port: 8080
    targetPort: 3000
